sqs jobs created and analisis video jobs endpoints added
